force-app/main/default/objects/Submission_Result__c/Submission_Result__c.object-meta.xml
<CustomObject>
    <description>1. Integration relevant (BIS)
2. ZRD
3. SF-261</description>
    <label>Submissionsergebnis</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Submission Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissionsergebnisse</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>