force-app/main/default/objects/Submission_Result__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZRD
3. SF-261</description>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>