force-app/main/default/objects/Submission_Result__c/fields/Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Amount__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZRD
3. SF-261</description>
    <label>Quote Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>