force-app/main/default/objects/Submission_Result__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Integration relevant (BIS)
2. ZRD
3. SF-261</description>
    <label>Winner</label>
    <type>Checkbox</type>
</CustomField>