force-app/main/default/objects/Submission_Result__c/validationRules/ZR_PreventNewSubmissionResult_BIS.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_PreventNewSubmissionResult_BIS</fullName>
    <active>true</active>
    <description>SF-828 This validation rule prevents new Submission Results being created for projects being imported from BIS.</description>
    <errorConditionFormula>IF(
ISPICKVAL(Project__r.Core_Source_System__c, &quot;BIS&quot; ),
ISNEW(),
FALSE
)
&amp;&amp;
 $Permission.Core_Submission_Result_Bypass_Validation_Rules  = FALSE
&amp;&amp;
$UserRole.Name &lt;&gt; &quot;Vertriebssteuerung&quot;
&amp;&amp;
NOT(CONTAINS($Profile.Name, &quot;dministrator&quot;))
&amp;&amp;
NOT(CONTAINS($User.Username , &quot;bis@force.com&quot;))</errorConditionFormula>
    <errorMessage>You can not create Submission Results for BIS projects.</errorMessage>
</ValidationRule>