force-app/main/default/objects/Submission_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Project__c</columns>
    <columns>Quote_Amount__c</columns>
    <columns>Winner__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Submissionsergebnisse</label>
</ListView>